# ChangeLog for net-im/minbif
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/minbif/ChangeLog,v 1.4 2010/05/17 12:51:16 phajdan.jr Exp $

  17 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> minbif-1.0.1.ebuild:
  x86 stable wrt bug #318785

  22 Mar 2010; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Fixed herd.

*minbif-1.0.1 (28 Feb 2010)

  28 Feb 2010; Cédric Krier <cedk@gentoo.org> -minbif-1.0.ebuild,
  +minbif-1.0.1.ebuild, +files/minbif-1.0.1-as-needed.patch:
  Version bump, fix for bug #299478 and add ~amd64

*minbif-1.0 (24 Nov 2009)

  24 Nov 2009; Cédric Krier <cedk@gentoo.org> +minbif-1.0.ebuild,
  +files/minbif.initd, +metadata.xml:
  New ebuild
