@@ -1,6 +1,8 @@
 AUX minbif-1.0.1-as-needed.patch 2031 RMD160 2b6e9091becfdfe4e8d8b7923b1b527b74430f69 SHA1 d533740ea1ef914d1b74584911f8cf64841045aa SHA256 f7e22e3de97e9eebfb8079729ea450634633a5323025cca32cdc94ca8c913347
 AUX minbif.initd 561 RMD160 14741a1d5e4e71c8ac71688a42c46985f74fc557 SHA1 e8e5749c43eb9f539487a8a03b2fe17db0651bc7 SHA256 0a66ca96897ae7fb948150e1d7e01b328de2c2d32521de4c6fe24fdd2f630c7a
 DIST minbif-1.0.1.tar.gz 152815 RMD160 6c22b309c148268533e17767adae8c24159edbb5 SHA1 5e9a6a4877493d6d7bcd70cd4ac324956f1197b3 SHA256 52e632974b65dc82396013979f3c76b8546366728f9f0e4b3685434a670e7771
+DIST minbif-1.0.3.tar.gz 168238 RMD160 ea1ead0e1a0bebc0929a1b3b08d074ec405ca36d SHA1 ab4f41c6b3777235d816e619f1770d1f9857f7a8 SHA256 fede0da71f673ee7d2a71673875724b8caac53618394711ed55406b3250145d6
 EBUILD minbif-1.0.1.ebuild 1728 RMD160 85501745940de682be059311003261d6a256b135 SHA1 2bd7a2fffe28e22fd2bef94711608faee9960c6e SHA256 4015c69e9682d9110bdb237b5a52cc1d9c4d820fc76a5d65324c483e4cb2e517
-MISC ChangeLog 762 RMD160 d47fea28ace4831c9d8674dfb901578c011e591f SHA1 17888c2828eaa9a9d21f604fb8ce59628db4137f SHA256 7faf7cde88e307a9bcb547bac62f2d163124f9d45ac5903d7b52dfd7545a6c2b
-MISC metadata.xml 334 RMD160 6d0839f31fa55a1dd3ef2eb5461b3d8d7e40f60b SHA1 8588ef9d3107df46638d517958df329666c8382e SHA256 e3bd4f18fe0aa19ce4df6f8bc865a1166b532c42d0c4d30bdd9f12989eaa2c0e
+EBUILD minbif-1.0.3.ebuild 1937 RMD160 1d4aa9e64e1685a47cd1a889fca05fd32a0d9d10 SHA1 4c498a62506195b9f5798e4ae48973a8286c7516 SHA256 7e3152c5bb69b0e73d4221ba36dddec5a7686ffaa9185a5979f13586401ba112
+MISC ChangeLog 870 RMD160 708cc390bbb4ca7c44e51d3d29b16501d736b1ae SHA1 734d74a15a7afdb993e1e39a05073103e6cda51f SHA256 701aaf2eb5d66a94b68b859a521c5b24257c8d05dbb9634f88d6100e1ce1ed2e
+MISC metadata.xml 395 RMD160 9ec4b43579ec6379c94193aaff7e6d204b6b9887 SHA1 1bb9d187344fadb13a0e6e9f4f03dd149371641c SHA256 4b1f003cfb9acfb7b4e0ba6bb85a07a87ca4a6b01b4b6c36fb405a9e8e6c9fb9
