@@ -6,6 +6,9 @@
 		<email>cedk@gentoo.org</email>
 		<name>Cédric Krier</name>
 	</maintainer>
+	<use>
+		<flag name="video">Add video support</flag>
+	</use>
 	<longdescription lang="en">
 		an IRC gateway to IM networks
 	</longdescription>
