@@ -1,6 +1,11 @@
 # ChangeLog for net-im/minbif
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/minbif/ChangeLog,v 1.4 2010/05/17 12:51:16 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/minbif/ChangeLog,v 1.5 2010/05/19 20:43:06 cedk Exp $
+
+*minbif-1.0.3 (19 May 2010)
+
+  19 May 2010; Cédric Krier <cedk@gentoo.org> +minbif-1.0.3.ebuild:
+  Version bump
 
   17 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> minbif-1.0.1.ebuild:
   x86 stable wrt bug #318785
